--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@
  scala:
    - "2.10.2"
  jdk:
-   - oraclejdk7
-   - openjdk7
    - openjdk6
+before_install:
+   - "git clone https://github.com/wala/WALA.git"
+   - "cd WALA"
+   - "mvn clean install -DskipTests=true"
+   - "cd .."
