--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@
    - "mvn clean install -DskipTests=true"
    - "cd .."
    - "wget http://repository.grepcode.com/java/ext/com/google/android/android/4.4.2_r1/android-4.4.2_r1.jar"
+   - "cd lib && ./install_deps.sh"
+   - cd ..
  scala:
    - "2.10.2"
  jdk:
