--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@
    - "wget http://repository.grepcode.com/java/ext/com/google/android/android/4.4.2_r1/android-4.4.2_r1.jar"
    - "cd lib && ./install_deps.sh"
    - cd ..
+ script: sbt "test:run android-4.4.2_r1.jar"
  scala:
    - "2.10.2"
  jdk:
