Fixing typo in travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
  language: scala
  before_install:
    - "wget http://repository.grepcode.com/java/ext/com/google/android/android/4.4.2_r1/android-4.4.2_r1.jar"
-   - "cd lib && ./install_deps.sh"
+   - "cd lib && ./install_deps.sh && cd .."
  script: sbt "test:run android-4.4.2_r1.jar"
  scala:
    - "2.10.2"
