--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@
  before_install:
    - "wget http://repository.grepcode.com/java/ext/com/google/android/android/4.4.2_r1/android-4.4.2_r1.jar"
    - "cd lib && ./install_deps.sh && cd .."
- script: sbt "test:run android-4.4.2_r1.jar"
+   - "cd stubs && ./compile_stubs.sh ../android-4.4.2_r1.jar && cd .."
+ script: sbt "test:run stubs/out/droidel_android-4.4.2_r1.jar"
  scala:
    - "2.10.2"
  jdk:
