--- a/src/test/resources/regression/LifecycleAndInterfaceCallback/bin/AndroidManifest.xml
+++ b/src/test/resources/regression/LifecycleAndInterfaceCallback/bin/AndroidManifest.xml
@@ -12,7 +12,7 @@
   <uses-permission android:name="android.permission.SEND_SMS"/>
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="MainActivity"
+        <activity android:name=".MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
